[package]
name = "gauss_solver_3x3" # Escolha um nome único, verifique se já não existe no crates.io
version = "0.1.1"
edition = "2024"
authors = ["Marcos Vinicius <viniciusrm.marcos@gmail.com"]
description = "Um solver determinístico e sem alocação em heap para sistemas lineares 3x3 usando Eliminação de Gauss."
license = "MIT OR Apache-2.0" # Licença padrão da comunidade Rust
repository = "https://github.com/strngrthnall/gauss_solver_3x3" # O link real do seu repositório
keywords = ["math", "linear-algebra", "gauss", "matrix", "no_std"]
categories = ["mathematics", "science"]

[dependencies]
